--- a/speech-therapist.html
+++ b/speech-therapist.html
@@ -66,7 +66,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qk9aVfwi&k=Job&j=oyh89fwQ&__jvst=Employee+Referral&__jvsd=sidjliwW&__jvsc=Twitter&bid=nSzzmMwD'>AccentCare, Inc.? Careers - Speech Language Pathologist PRN Humble TX</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qk9aVfwi&k=Job&j=oyh89fwQ&__jvst=Employee+Referral&__jvsd=sidjliwW&__jvsc=Twitter&bid=nSzzmMwD'>AccentCare, Inc.? Careers - Speech Language Pathologist PRN Humble TX</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -159,7 +159,7 @@ Language Pathologists to work Full-Time for our Skilled Nursing Facility in?...<
 <p><span class="badge badge-light">Fort Worth, TX</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/kidscare-home-health/job/osj63fwE'>KidsCare Home Health Careers - Bilingual Pediatric Speech and Language Therapist Assistant - SLPA</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/kidscare-home-health/job/osj63fwE'>KidsCare Home Health Careers - Bilingual Pediatric Speech and Language Therapist Assistant - SLPA</a></h5> 
 <p><span class="badge badge-light">Fort Worth, TX</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
@@ -249,7 +249,7 @@ Speech Language Pathologist (SLP) administers speech therapy to patients on?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qk9aVfwi&k=Job&j=o1EgbfwQ&__jvst=Employee+Referral&__jvsd=sJYpDgwu&__jvsc=Twitter&bid=nZa78MwF'>AccentCare, Inc.? Careers - Speech Language Pathologist SLP Part Time Redding CA</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qk9aVfwi&k=Job&j=o1EgbfwQ&__jvst=Employee+Referral&__jvsd=sJYpDgwu&__jvsc=Twitter&bid=nZa78MwF'>AccentCare, Inc.? Careers - Speech Language Pathologist SLP Part Time Redding CA</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on:: 2019-10-14</p>
 <hr/>
@@ -269,7 +269,7 @@ Speech Language Pathologist (SLP) administers speech therapy to patients on?...<
 <p><span class="badge badge-light">Waterloo</span></p>
 <p>Posted on: 2019-10-13</p>
 <hr/>
-<h5><a href='https://new-story-1.workable.com/j/B3392A3FDB'>New Story - Jobs: Speech Language Pathologist - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://new-story-1.workable.com/j/B3392A3FDB'>New Story - Jobs: Speech Language Pathologist - Apply online</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-12</p>
 <hr/>
@@ -401,7 +401,7 @@ Speech Language Pathologist (SLP) administers speech therapy to patients on?...<
 <p><span class="badge badge-light">Baltimore, MD</span></p>
 <p>Posted on: 2019-10-05</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://postings.com/recruiter-2086124/jobs/education-training-library/speech-pathologist-needed-immediately-full-time-position-garden-city-ny-11530/83868'>
+<h5><a href='https://postings.com/recruiter-2086124/jobs/education-training-library/speech-pathologist-needed-immediately-full-time-position-garden-city-ny-11530/83868'>
 Speech-Pathologist Needed immediately - full time position in Garden City, from Kidz Therapy Services PLLC, by Anna Stellman
 </a></h5> 
 <p><span class="badge badge-light">Garden City, NY</span></p>
@@ -447,7 +447,7 @@ Speech-Pathologist Needed immediately - full time position in Garden City, from 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-02</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/TheracareINC/743999696075796-speech-language-pathologist'>Theracare INC Speech Language Pathologist | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/TheracareINC/743999696075796-speech-language-pathologist'>Theracare INC Speech Language Pathologist | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-02</p>
 <hr/>
