--- a/devops.html
+++ b/devops.html
@@ -70,7 +70,7 @@
 <p><span class="badge badge-light">Vietnam</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHO9Vfwj&k=Job&j=oas49fwz&__jvst=Employee&__jvsd=sPcd2gw1&__jvsc=Twitter&bid=nC88mMwv'>Schneider Electric NAM Careers - Security Team Leader (Cloud, Big Data, DevOps, Risk Assurance)</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHO9Vfwj&k=Job&j=oas49fwz&__jvst=Employee&__jvsd=sPcd2gw1&__jvsc=Twitter&bid=nC88mMwv'>Schneider Electric NAM Careers - Security Team Leader (Cloud, Big Data, DevOps, Risk Assurance)</a></h5> 
 <p><span class="badge badge-light">Boston, Massachusetts  Bangalore Boston</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -94,7 +94,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/recursionpharmaceuticals/jobs/1920225'>Job Application for Sr. DevOps Engineer at Recursion Pharmaceuticals</a></h5> 
+<h5><a href='https://boards.greenhouse.io/recursionpharmaceuticals/jobs/1920225'>Job Application for Sr. DevOps Engineer at Recursion Pharmaceuticals</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -136,7 +136,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/quadient/job/oj4rbfwJ'>Quadient Careers - Ing?nieur Syst?me DevOps</a></h5> 
+<h5><a href='http://jobs.jobvite.com/quadient/job/oj4rbfwJ'>Quadient Careers - Ing?nieur Syst?me DevOps</a></h5> 
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -145,7 +145,7 @@
 <p>Oct 21, 2019 ... 1.1.1.1: We released 1.1.1.1 to help fix the foundation of the Internet by building a 
 faster, more secure and privacy-centric public DNS resolver. This is available?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/j2-global/job/oHiobfwi'>J2 Global Careers - DevOPs Systems Administrator</a></h5> 
+<h5><a href='http://jobs.jobvite.com/j2-global/job/oHiobfwi'>J2 Global Careers - DevOPs Systems Administrator</a></h5> 
 <p><span class="badge badge-light">Galway</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -249,7 +249,7 @@ faster, more secure and privacy-centric public DNS resolver. This is available?.
 <p><span class="badge badge-light">San Mateo, California</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=os4ibfwJ&__jvst=Employee&__jvsd=sv16Ffw1&__jvsc=Twitter&bid=nGKIlMwK'>Guidewire Software, Inc. Careers - Cloud DevOps</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=os4ibfwJ&__jvst=Employee&__jvsd=sv16Ffw1&__jvsc=Twitter&bid=nGKIlMwK'>Guidewire Software, Inc. Careers - Cloud DevOps</a></h5> 
 <p><span class="badge badge-light">Dublin</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -313,7 +313,7 @@ faster, more secure and privacy-centric public DNS resolver. This is available?.
 <p><span class="badge badge-light">Galway</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/foodpandaphilippines/jobs/1803379'>Job Application for Senior DevOps Engineer - Singapore Based  at foodpanda Philippines</a></h5> 
+<h5><a href='https://boards.greenhouse.io/foodpandaphilippines/jobs/1803379'>Job Application for Senior DevOps Engineer - Singapore Based  at foodpanda Philippines</a></h5> 
 <p><span class="badge badge-light">Singapore Philippines  Singapore Philippines Singapore  Singapore</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -338,7 +338,7 @@ faster, more secure and privacy-centric public DNS resolver. This is available?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://upvest.join.com/jobs/448241-senior-lead-devops-engineer-m-f-d-berlin'>Job @ Upvest (Berlin): Senior/Lead DevOps Engineer... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://upvest.join.com/jobs/448241-senior-lead-devops-engineer-m-f-d-berlin'>Job @ Upvest (Berlin): Senior/Lead DevOps Engineer... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin  Berlin, Germany</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -364,7 +364,7 @@ faster, more secure and privacy-centric public DNS resolver. This is available?.
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://10pearls.workable.com/j/D70CE7603F'>Senior Software Arch/Dev/QA/PM/DevOps - 10Pearls</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://10pearls.workable.com/j/D70CE7603F'>Senior Software Arch/Dev/QA/PM/DevOps - 10Pearls</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 15, 2019 ... Requirements. Bachelor's degree in Computer Science along with relevant 
 experience in the current role i.e.. Senior Software Architect - minimum of 8 years 
@@ -410,7 +410,7 @@ of?...</p>
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/resolver/job/oNE99fwt'>Resolver Careers - DevOps Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/resolver/job/oNE99fwt'>Resolver Careers - DevOps Engineer</a></h5> 
 <p><span class="badge badge-light">Toronto, Ontario</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
